fixed search bar alignment error

--- a/public/stylesheets/message-style.css
+++ b/public/stylesheets/message-style.css
@@ -47,6 +47,6 @@
 	margin-top: 10px;
 }
 
-input {
+#message-input input {
 	margin-top: 10px;
 }
